--- a/apispec.yaml
+++ b/apispec.yaml
@@ -976,7 +976,7 @@ paths:
             summary: Login to the system
             requestBody:
                 content:
-                    application/json:
+                    application/x-www-form-urlencoded:
                         schema:
                             $ref: '#/components/schemas/auth_request'
             responses:
@@ -2420,6 +2420,51 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/error_server_response'
 
+    # ------------------------------------------------
+    # Truck Types
+    # ------------------------------------------------
+    /api/truck_types:
+        get:
+            tags:
+                - 'Truck Type'
+            description: Get list of truck types
+            summary: Get list of truck types
+            responses:
+                '200':
+                    description: Success getting list of truck types
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: string
+                                        example: 'OK'
+                                    code:
+                                        type: number
+                                        example: 200
+                                    error:
+                                        type: string
+                                        example: null
+                                    links:
+                                        type: object
+                                        properties:
+                                            self:
+                                                type: string
+                                                example: 'somelink'
+                                    data:
+                                        type: array
+                                        minItems: 3
+                                        items:
+                                            $ref: '#/components/schemas/truck_type_response'
+                                    pagination:
+                                        $ref: '#/components/schemas/pagination'
+                '500':
+                    description: Server Error
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/error_server_response'
     /api/provinces:
         get:
             tags:
