--- a/apispec.yaml
+++ b/apispec.yaml
@@ -976,7 +976,7 @@ paths:
             summary: Login to the system
             requestBody:
                 content:
-                    application/json:
+                    application/x-www-form-urlencoded:
                         schema:
                             $ref: '#/components/schemas/auth_request'
             responses:
@@ -1398,7 +1398,7 @@ paths:
     # ------------------------------------------------
     # Midtrans - Web hooks
     # ------------------------------------------------
-    /api/payments/confirm:
+    /api/payments/webhook:
         post:
             tags:
                 - 'Payment'
@@ -1580,13 +1580,6 @@ paths:
             summary: Get currently shipping order by authenticated driver
             security:
                 - JWTAuthDriver: []
-            parameters:
-                - in: path
-                  name: orderID
-                  required: true
-                  schema:
-                      type: number
-                      example: 27
             responses:
                 '200':
                     description: Success getting detail of single order
@@ -1932,7 +1925,7 @@ paths:
                 - JWTAuthCustomer: []
             parameters:
                 - in: path
-                  name: orderID
+                  name: driverID
                   required: true
                   schema:
                       type: number
@@ -2052,7 +2045,7 @@ paths:
                 - JWTAuthAdmin: []
             parameters:
                 - in: path
-                  name: orderID
+                  name: customerID
                   required: true
                   schema:
                       type: number
@@ -2427,6 +2420,51 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/error_server_response'
 
+    # ------------------------------------------------
+    # Truck Types
+    # ------------------------------------------------
+    /api/truck_types:
+        get:
+            tags:
+                - 'Truck Type'
+            description: Get list of truck types
+            summary: Get list of truck types
+            responses:
+                '200':
+                    description: Success getting list of truck types
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: string
+                                        example: 'OK'
+                                    code:
+                                        type: number
+                                        example: 200
+                                    error:
+                                        type: string
+                                        example: null
+                                    links:
+                                        type: object
+                                        properties:
+                                            self:
+                                                type: string
+                                                example: 'somelink'
+                                    data:
+                                        type: array
+                                        minItems: 3
+                                        items:
+                                            $ref: '#/components/schemas/truck_type_response'
+                                    pagination:
+                                        $ref: '#/components/schemas/pagination'
+                '500':
+                    description: Server Error
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/error_server_response'
     /api/provinces:
         get:
             tags:
@@ -2523,6 +2561,13 @@ paths:
             parameters:
                 - in: path
                   name: provinceID
+                  description: city ID
+                  required: true
+                  schema:
+                      type: string
+                      example: 77
+                - in: path
+                  name: cityID
                   description: Filter districts by city ID
                   required: true
                   schema:
