fix: workflow branch

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -21,6 +21,6 @@ jobs:
                   port: ${{ secrets.PORT }}
                   script: |
                       cd /home/ubuntu/Bringeee-API
-                      git pull origin deployment -f
+                      git pull origin main -f
                       docker-compose down
                       docker-compose up --build -d
