--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -23,4 +23,5 @@ jobs:
                       cd /home/ubuntu/Bringeee-API
                       git pull origin main -f
                       docker-compose down
+                      docker image rm bringeee-api_app
                       docker-compose up --build -d
