add: midtrans and matrix api env conf example

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@ AWS_S3_BUCKET=
 AWS_S3_REGION=
 AWS_S3_ACCESS_KEY=
 AWS_S3_SECRET_KEY=
+
+MIDTRANS_BASE_URL_PRODUCTION=
+MIDTRANS_BASE_URL_DEVELOPMENT=
+MIDTRANS_SERVER_KEY=
+
+DISTANCE_MATRIX_API_KEY=
+DISTANCE_MATRIX_BASE_URL=
